[package]
name = "pasman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
directories = "4.0.1"
md5 = "0.7.0"
aes-gcm = "0.9.4"
hex = "0.4.3"
rand = "0.8.4"
humantime = "2.1.0"
prettytable-rs = "0.8.0"